# simple_clob

./: .gitattributes  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
frontend/clob-frontend/: package-lock.json  package.json
frontend/clob-frontend/src/: App.tsx  api.ts
frontend/clob-frontend/src/components/: ClobStats.tsx  CreateOrderForm.tsx
src/: lib.rs  main.rs  order_generator.rs  order_match.rs
