[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# stochastic-rs = "0.13.4"
rand = "0.9.2"
# eframe = "0.27"
# egui_plot = "0.27"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }